Adding google form

--- a/views/index.jade
+++ b/views/index.jade
@@ -227,6 +227,9 @@ block content
         p.text-center
           a.go-up(href="#")
             i.ion-arrow-up-b
+        h2 ¿Te interesa conocer novedades sobre el evento?
+        p.text-center
+          a.button(href="http://goo.gl/forms/6QY3C0DQQc", target="_blank") Mantenerme al tanto
         ul.list-inline.social-networks-list
           li
             a(href="https://twitter.com/emprendevs/", target="_blank")
