--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -483,7 +483,7 @@ section.animated.fadeIn {
     padding-bottom: 10px;
 
 // Auspiciantes
-.auspiciantes-con
+.auspiciantes-con, .con-social-networks
   text-align: center
   img
     max-width: 200px
@@ -509,7 +509,7 @@ section.animated.fadeIn {
 .con-social-networks
   text-align: center
   .social-networks-list
-    padding-top: 180px
+    padding-top: 40px
     li
       padding: 20px
     a
