--- a/views/index.jade
+++ b/views/index.jade
@@ -243,6 +243,9 @@ block content
           li
             a(href="https://www.linkedin.com/grp/home?gid=8386827", target="_blank")
               i.ion-social-linkedin
+          li
+            a(href="https://plus.google.com/u/0/102479694016638575862", target="_blank")
+              i.ion-social-googleplus
         p.sub-line.text-center
           | &#8226; Aprendé, construí y divertite &#8226;
   //.row
