Adding Terms and Conditions

--- a/views/index.jade
+++ b/views/index.jade
@@ -90,7 +90,8 @@ block content
               | Los equipos tendrán 48 horas a partir del inicio del concurso para crear una aplicación web desde cero
             li
               i.fa-li.fa.fa-check-circle
-              | Al finalizar el jurado elegirá a un ganador teniendo en cuenta los criterios de evaluación detallados en las Bases y Condiciones de la Competencia 
+              | Al finalizar el jurado elegirá a un ganador teniendo en cuenta los criterios de evaluación detallados en las 
+              a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank")Bases y Condiciones de la Competencia 
         p.text-center
           a.button.hide(href="#") Ver Bases y Condiciones
   .arrow-separator.arrow-themelight
@@ -248,6 +249,7 @@ block content
               i.ion-social-googleplus
         p.sub-line.text-center
           | &#8226; Aprendé, construí y divertite &#8226;
+          a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank")Bases y Condiciones de la Competencia 
   //.row
     .neck
       #main-carousel.carousel.carousel-bg.slide(data-ride='carousel', data-interval="30000", hero)
