Terms and conditions linked

--- a/views/index.jade
+++ b/views/index.jade
@@ -91,9 +91,9 @@ block content
             li
               i.fa-li.fa.fa-check-circle
               | Al finalizar el jurado elegirá a un ganador teniendo en cuenta los criterios de evaluación detallados en las 
-              a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank")Bases y Condiciones de la Competencia 
+              | Bases y Condiciones de la Competencia 
         p.text-center
-          a.button.hide(href="#") Ver Bases y Condiciones
+          a.button(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank") Ver Bases y Condiciones
   .arrow-separator.arrow-themelight
   .row.color-1
     .col-sm-12
@@ -249,7 +249,8 @@ block content
               i.ion-social-googleplus
         p.sub-line.text-center
           | &#8226; Aprendé, construí y divertite &#8226;
-          a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank")Bases y Condiciones de la Competencia 
+        p.sub-line.text-center
+          a(href="https://docs.google.com/document/d/1ZEy6cX_3-LT4gJPxTU6_eT3JORd_tiulDJLi3h9dFHc/edit?usp=sharing", target="_blank") Bases y Condiciones de la Competencia 
   //.row
     .neck
       #main-carousel.carousel.carousel-bg.slide(data-ride='carousel', data-interval="30000", hero)
