--- a/views/index.jade
+++ b/views/index.jade
@@ -190,7 +190,7 @@ block content
               | Diseño, estética, presentación
             li
               i.fa-li.fa.fa-wheelchair
-              | Accesibilidad, plain language
+              | Accesibilidad  (Level A y AA), plain language
             li
               i.fa-li.fa.fa-star-o
               | Documentación, tests, código fuente, integración continua, coverage
@@ -200,6 +200,9 @@ block content
             li
               i.fa-li.fa.fa-file-code-o
               | Entregables, repositorio, manual de uso, demostración en video
+        p.text-center
+          a.button(href="https://www.linkedin.com/grp/home?gid=8386827", target="_blank")
+            | Aprender Más
   .arrow-separator.arrow-grey
   .row.color-4
     .col-sm-10.col-sm-offset-1
