Changing GAMEiQ organizador

--- a/views/index.jade
+++ b/views/index.jade
@@ -215,11 +215,11 @@ block content
           li
             a(href="http://emprendedores.la/", target="_blank")
               img(src="./sponsors/logo-emprendedoresla.png")
-        h2 Sponsors
-        ul.list-inline
           li
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
+        h2.hide Sponsors
+        ul.hide.list-inline
         h2.hide Premios
         p.hide Serán revelados muy pronto...
         p.text-center
