--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -337,6 +337,10 @@ section.animated.fadeIn {
   animation-fill-mode: both;
 }
 
+// Social Networks Home
+.share-social
+  margin-left: -12px;
+
 // Calendar
 .calendar-resume
   padding: 30px 0
@@ -504,6 +508,8 @@ section.animated.fadeIn {
       background: #666;
       color: #eee;
       text-decoration: none;
+  a:hover
+    opacity: 0.9;
 
 // Social Networks
 .con-social-networks
@@ -617,6 +623,12 @@ section.animated.fadeIn {
     padding: 20px 30px;
     min-height: 280px;
   }
+  
+  // Social Networks Home
+  .share-social {
+    padding-bottom:20px;
+    margin-left: 0;
+  }
 
   .neck-step-2 {
     padding: 60px 0;
@@ -704,12 +716,18 @@ section.animated.fadeIn {
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
+  // Social Networks Home
+  .share-social {
+    padding-bottom:20px;
+    margin-left: 0;
+  }
 }
 
 /* Custom, iPhone Retina */ 
 @media only screen and (max-width : 320px) {
-        
+
 }
+
 
 /* Twitter Bootstrap 3.2.0 Callout CSS Styles */
 /* http://cpratt.co/twitter-bootstrap-callout-css-styles/ */ 
