--- a/views/index.jade
+++ b/views/index.jade
@@ -153,6 +153,7 @@ block content
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
             p.label-n Alejandro Motta
+            p.label-brand Director · Emprendedores.LA 
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/alejandromotta", target="_blank")
@@ -163,6 +164,7 @@ block content
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
             p.label-n Yanina Ibarra
+            p.label-brand Principal · Texts and Contexts 
             ul.list-inline
               li  
                 a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
@@ -170,7 +172,7 @@ block content
                 li.hide
                   a(href="#", target="_blank")
                     i.fa.fa-twitter-square.fa-2x
-          li
+          //li
             img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
             p.label-n Leandro Di Chiazza
             ul.list-inline
@@ -183,12 +185,76 @@ block content
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
             p.label-n Cristian Cortez
+            p.label-brand Director · GameIQ 
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
                   i.fa.fa-linkedin-square.fa-2x
               li
                 a(href="https://twitter.com/cortezcristian", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/pkeilty-foto.jpg")
+            p.label-n Patricio Keilty
+            p.label-brand Team Lead · Velocity Partners
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/cortezcristian", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          //li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mfigge-foto.jpg")
+            p.label-n Mario Figge
+            p.label-brand Director · 3tristestigres
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/mariofigge", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/mariofigge", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mrepetto-foto.jpg")
+            p.label-n Martin Repetto
+            p.label-brand CEO · Voxelus Studios
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/pub/martin-repetto/11/747/27b", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              //li
+                a(href="https://twitter.com/marianoobeid", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/eacosta-foto.jpg")
+            p.label-n Esteban Acosta 
+            p.label-brand Technical Manager · Globant 
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/estebanav", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mobeid-foto.jpg")
+            p.label-n Mariano Obeid
+            p.label-brand Director · Killabunnies
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/marianoobeid", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/marianoobeid", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/lvandongen-foto.jpg")
+            p.label-n Lucas van Dongen
+            p.label-brand Freelancer · Mobile Expert
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/pub/lucas-van-dongen/a1/785/60a", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/lucasvandongen", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com", target="_blank") Postular Jurado
