--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -458,6 +458,8 @@ section.animated.fadeIn {
   .label-n
     padding: 0
     margin: 5px 5px 0 5px
+  .label-brand
+    font-size: 12px;
   li > img
     max-width: 60%
     border: 2px solid #ccc;
