cambiando lugar fechas y botones de redes sociales

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,19 @@ block content
           br
           | La primer hackathon para programadores  
           i fullstack
+        p.sub-line.text-center
+          i.fa.fa-calendar.fa-fw
+          | 13, 14 y 15 de Noviembre
+        p.sub-line.text-center
+          a(href="https://www.google.com.ar/maps/place/Grupo+Polo+Tecnologico+Rosario+S.H./@-32.9474163,-60.6353579,17z/data=!4m6!1m3!3m2!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007!2sGrupo+Polo+Tecnologico+Rosario+S.H.!3m1!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007")
+            i.fa.fa-map-marker.fa-fw
+            | Maipú 835, Polo Tecnológico Rosario
+  .arrow-separator.arrow-white
+  .row.color-1
+    .col-sm-12
+      section.neck-step-2
+        .fc-con.animated(flipclock)
+        // Botones redes sociales
         #fb-root
         script.
           (function(d, s, id) {
@@ -33,31 +46,7 @@ block content
                 a.twitter-share-button(href='https://twitter.com/share', data-url='http://www.emprendevs.com') Tweet
                 script.
                   !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-        p.sub-line.text-center
-          a(href="https://www.google.com.ar/maps/place/Grupo+Polo+Tecnologico+Rosario+S.H./@-32.9474163,-60.6353579,17z/data=!4m6!1m3!3m2!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007!2sGrupo+Polo+Tecnologico+Rosario+S.H.!3m1!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007")
-            i.fa.fa-map-marker.fa-fw
-            | Maipú 835, Polo Tecnológico Rosario
-  .arrow-separator.arrow-white
-  .row.color-1
-    .col-sm-12
-      section.neck-step-2
-        .fc-con.animated(flipclock)
-        ul.list-inline.calendar-resume
-          li
-            p
-              i.fa.fa-calendar
-            p.highlight 13/11
-            p Kickstart
-          li
-            p 
-              i.fa.fa-calendar
-            p.highlight 14/11
-            p Hackathon
-          li
-            p
-              i.fa.fa-calendar
-            p.highlight 15/11
-            p Premiación
+        // Fin botones redes sociales
   .arrow-separator.arrow-theme
   .row.color-2
     .col-sm-10.col-sm-offset-1
