Agregando logo de auspiciantes

--- a/views/index.jade
+++ b/views/index.jade
@@ -246,7 +246,7 @@ block content
                 a(href="https://twitter.com/lucasvandongen", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
         p.text-center
-          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Postular Jurado
+          a.button(href="mailto:emprendevs@gmail.com?subject=Postular Jurado", target="_blank") Postular Jurado
 
         h2 Criterios de Evaluación
         div.col-sm-10.col-sm-offset-1
@@ -293,12 +293,42 @@ block content
           li
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
+        h2 Auspiciantes
+        ul.list-inline
+          li
+            a(href="http://www.osde.com.ar/", target="_blank")
+              img(src="./auspiciantes/osde.png")
+          li
+            a(href="http://transdatos.com.ar/", target="_blank")
+              img(src="./auspiciantes/transdatos.jpg")
+          li
+            a(href="http://www.erapm.com.ar/", target="_blank")
+              img(src="./auspiciantes/era.png")
+        h2 Institucionales
+        ul.list-inline
+          li
+            a(href="http://www.pmi.org.ar/", target="_blank")
+              img(src="./institucionales/pmi.png")
+          li
+            a(href="http://www.rosario.gov.ar/", target="_blank")
+              img(src="./institucionales/mr.png")
+          li
+            a(href="http://www.moverse.org/", target="_blank")
+              img(src="./institucionales/moverse.png")
+        h2 Media Partners
+        ul.list-inline
+          li
+            a(href="http://info341.com.ar/", target="_blank")
+              img(src="./mediapartners/info341.jpg")
+          li
+            a(href="http://nodocios.com.ar/", target="_blank")
+              img(src="./mediapartners/nodocios.png")
         h2.hide Sponsors
         ul.hide.list-inline
         h2.hide Premios
         p.hide Serán revelados muy pronto...
         p.text-center
-          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Auspiciar el Evento
+          a.button(href="mailto:emprendevs@gmail.com?subject=Solicitud para auspiciar el evento", target="_blank") Auspiciar el Evento
   .arrow-separator.arrow-white
   .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
