--- a/views/index.jade
+++ b/views/index.jade
@@ -245,6 +245,17 @@ block content
               li
                 a(href="https://twitter.com/lucasvandongen", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
+          li
+            img.img-circle.img-responsive.center-block(src="img/jurados/mfigge-foto.jpg")
+            p.label-n Mario Figge
+            p.label-brand Docente - Full Stack Developer 
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/mariofigge", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/mariofigge", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com?subject=Postular Jurado", target="_blank") Postular Jurado
 
@@ -312,6 +323,9 @@ block content
           li
             a(href="http://www.rosario.gov.ar/", target="_blank")
               img(src="./institucionales/mr.png")
+          li
+            a(href="http://www.santafe.gov.ar/", target="_blank")
+              img(src="./institucionales/santafe.jpg")
           li
             a(href="http://www.moverse.org/", target="_blank")
               img(src="./institucionales/moverse.png")
