cambios en link de botones

--- a/views/index.jade
+++ b/views/index.jade
@@ -80,7 +80,7 @@ block content
           li
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
         p.text-center
-          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Sugerir tecnología
+          a.button(href="mailto:emprendevs@gmail.com?subject=Sugerirencia de  tecnología", target="_blank") Sugerir tecnología
         .col-sm-10.col-sm-offset-1
           ul.fa-ul.text-left.lista-categorias
             li
@@ -132,7 +132,7 @@ block content
               i.fa-li.fa.fa-check-circle
               | Productividad, Gestión de Tareas, Herramientas para Desarrolladores
         p.text-center
-          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Proponer Categoría
+          a.button(href="mailto:emprendevs@gmail.com?subject=Proponer categoría", target="_blank") Proponer Categoría
   .arrow-separator.arrow-theme
   .row.color-3
     .col-sm-10.col-sm-offset-1.criterios-con
@@ -188,7 +188,7 @@ block content
             p.label-brand Team Lead · Velocity Partners
             ul.list-inline
               li
-                a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
+                a(href="https://www.linkedin.com/pub/patricio-keilty/6/954/86", target="_blank")
                   i.fa.fa-linkedin-square.fa-2x
               li
                 a(href="https://twitter.com/cortezcristian", target="_blank")
@@ -248,7 +248,7 @@ block content
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/mfigge-foto.jpg")
             p.label-n Mario Figge
-            p.label-brand Docente - Full Stack Developer 
+            p.label-brand Director · 3tristestigres 
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/mariofigge", target="_blank")
