cambios en link y agregando Agenda

--- a/views/index.jade
+++ b/views/index.jade
@@ -191,7 +191,7 @@ block content
                 a(href="https://www.linkedin.com/pub/patricio-keilty/6/954/86", target="_blank")
                   i.fa.fa-linkedin-square.fa-2x
               li
-                a(href="https://twitter.com/cortezcristian", target="_blank")
+                a(href="https://twitter.com/patokeilty", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
           //li
             img.img-circle.img-responsive.center-block(src="img/jurados/mfigge-foto.jpg")
@@ -297,7 +297,7 @@ block content
         ul.list-inline
           li
             a(href="http://www.polotecnologico.net/", target="_blank")
-              img(src="./sponsors/logo-polo-tecnologico3.png")
+              img(src="./sponsors/CFCH.png")
           li
             a(href="http://emprendedores.la/", target="_blank")
               img(src="./sponsors/logo-emprendedoresla.png")
