--- a/views/partials/site-menu.jade
+++ b/views/partials/site-menu.jade
@@ -19,5 +19,7 @@ nav.navbar.navbar-inverse(role='navigation')
           a(href='/contact')
             i.fa.fa-envelope-o(style='padding-right:10px') 
             | Contact
+        li
+          a(href='/agenda') Agenda
         // public:page:menu:end
       ul.nav.navbar-nav.navbar-right
