--- a/views/index.jade
+++ b/views/index.jade
@@ -310,8 +310,15 @@ block content
             a(href="http://www.osde.com.ar/", target="_blank")
               img(src="./auspiciantes/osde.png")
           li
+            a(href="http://donweb.com/", target="_blank")
+              img(src="./auspiciantes/donweb.jpg")
+          li
             a(href="http://transdatos.com.ar/", target="_blank")
               img(src="./auspiciantes/transdatos.jpg")
+        ul.list-inline
+          li
+            a(href="http://killabunnies.com.ar/", target="_blank")
+              img(src="./auspiciantes/killabunnies.png")
           li
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
@@ -334,6 +341,9 @@ block content
           li
             a(href="http://info341.com.ar/", target="_blank")
               img(src="./mediapartners/info341.jpg")
+          li
+            a(href="https://www.facebook.com/inspirarte.tv", target="_blank")
+              img(src="./mediapartners/inspirarte.png")
           li
             a(href="http://nodocios.com.ar/", target="_blank")
               img(src="./mediapartners/nodocios.png")
