Pre-inscribirse & GameiQ point to FB

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,8 @@ block content
   .row.color-1
     .col-sm-12
       section.neck-step-2
+        p.text-center(style="padding-bottom: 20px; margin-bottom:20px")
+          a.button(href="https://goo.gl/bHiWIr", target="_blank") Pre-inscribirse 
         .fc-con.animated(flipclock)
         // Botones redes sociales
         #fb-root
@@ -174,7 +176,7 @@ block content
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
             p.label-n Cristian Cortez
-            p.label-brand Director · GameIQ 
+            p.label-brand Director · GameiQ 
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
@@ -302,7 +304,7 @@ block content
             a(href="http://emprendedores.la/", target="_blank")
               img(src="./sponsors/logo-emprendedoresla.png")
           li
-            a(href="http://www.gameiq.la", target="_blank")
+            a(href="https://www.facebook.com/GAMEiQ-450429398456654", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
         h2 Auspiciantes
         ul.list-inline
