--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -354,6 +354,24 @@ section.animated.fadeIn {
   i
     font-size: 60px
 
+.neck-step-2
+  .button
+    display: inline-block;
+    border: solid 2px #FFF;
+    background: rgba(0,0,0,0);
+    color: #FFF;
+    font-size: 18px
+    text-transform: uppercase;
+    width: 300px
+    height: 45px
+    line-height: 45px
+    margin: 20px 0
+    &:hover, &:active
+      border: solid 2px #FFF;
+      background: #FFF;
+      color: #1ABC9C;
+      text-decoration: none;
+
 // Desafio
 .desafio-con
   text-align: center
