--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -866,7 +866,7 @@ section.animated.fadeIn {
 /** Agenda Speaker **/
 table td.speaker {
   position: relative;
-  color: #5c5f74;
+  color: #1A677D;
 }
 table td.speaker img {
   float: left;
