Adding new logos

--- a/views/index.jade
+++ b/views/index.jade
@@ -327,9 +327,6 @@ block content
         h2 Institucionales
         ul.list-inline
           li
-            a(href="http://www.pmi.org.ar/", target="_blank")
-              img(src="./institucionales/pmi.png")
-          li
             a(href="http://www.rosario.gov.ar/", target="_blank")
               img(src="./institucionales/mr.png")
           li
@@ -338,6 +335,16 @@ block content
           li
             a(href="http://www.moverse.org/", target="_blank")
               img(src="./institucionales/moverse.png")
+        ul.list-inline
+          li
+            a(href="http://www.cifasis-conicet.gov.ar/", target="_blank")
+              img(src="./institucionales/cifasis.png")
+          li
+            a(href="http://www.pmi.org.ar/", target="_blank")
+              img(src="./institucionales/pmi.png")
+          li
+            a(href="http://www.frro.utn.edu.ar/", target="_blank")
+              img(src="./institucionales/utnrosario.jpg")
         h2 Media Partners
         ul.list-inline
           li
