--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -882,6 +882,7 @@ section.animated.fadeIn {
 
 
 /** Agenda Speaker **/
+/*
 table td.speaker {
   position: relative;
   color: #5c5f74;
@@ -911,3 +912,44 @@ table td.speaker a.cta {
   transform: translateY(-50%);
   position: absolute;
 }
+*/
+.agenda
+  .table-responsive
+     table.table.table-condensed.table-bordered
+       thead
+         tr
+           th
+             font-size: 20px;
+       tbody
+         p
+           font-size: 16px;
+           text-align: left;
+           padding: 5px;
+           margin: 0;
+         tr
+           td.agenda-date
+             .dayofmonth
+               font-size: 30px;
+             .dayofweek
+               font-size: 20px;
+               float: left;
+               padding-left: 6px;
+             .shortdate.text-muted
+               font-size: 12px;
+           td.agenda-time
+           td.agenda-event.speaker
+             .agenda-event
+               text-align: left;
+               font-size: 28px;
+               h3
+                 margin: 3px;
+                 font-size: 20px;
+                 span
+                   font-size: 19px;
+.premios
+  h4
+    font-size: 18px
+    text-align:left
+  p
+    text-align:left
+    font-size: 14px
