--- a/views/index.jade
+++ b/views/index.jade
@@ -330,6 +330,9 @@ block content
             a(href="http://killabunnies.com.ar/", target="_blank")
               img(src="./auspiciantes/killabunnies.png")
           li
+            a(href="http://www.tecso.coop/", target="_blank")
+              img(src="./auspiciantes/tecso.png")
+          li
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
         h2 Institucionales
