--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -386,6 +386,8 @@ section.animated.fadeIn {
     background: url('../sponsors/tech-logos.png') no-repeat;
     &:hover
       opacity: 1
+  .tech-generic
+    background: transparent;
   .tech-anyandgo
     background-position: -11px -9px
   .tech-mongo
