--- a/views/index.jade
+++ b/views/index.jade
@@ -62,9 +62,11 @@ block content
     .col-sm-10.col-sm-offset-1
       section.neck-step-3.desafio-con
         h2 
-          | El Desafío consiste en
-          | construir una aplicación web
-          | usando alguna de las siguientes tecnologías:
+          | El 
+          strong desafío 
+          |  consiste en
+          | construir una aplicación web o mobile
+          | usando al menos una de las siguientes tecnologías:
         ul.list-inline.tech
           li
             a.tech-anyandgo(href="http://anyandgo.io/", target="_blank")
@@ -82,13 +84,32 @@ block content
           li
             a.tech-backbone(href="http://backbonejs.org/", target="_blank")
           li
-            a.tech-reactjs(href="http://facebook.github.io/react/", target="_blank")
-          li
             a.tech-ionic(href="http://ionicframework.com/", target="_blank")
           li
+            a.tech-reactjs(href="http://facebook.github.io/react/", target="_blank")
+          //li
             a.tech-auth0(href="https://auth0.com/", target="_blank")
           li
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
+        ul.list-inline.tech
+          li
+            a.tech-generic(href="http://getbootstrap.com/", target="_blank")
+              img.img-circle(src="img/logos/bootstrap.png")
+          li
+            a.tech-generic(href="https://www.python.org/", target="_blank")
+              img(src="img/logos/python.png")
+          li
+            a.tech-generic(href="https://www.ruby-lang.org", target="_blank")
+              img(src="img/logos/ruby.png")
+          li
+            a.tech-generic(href="http://laravel.com/", target="_blank")
+              img(src="img/logos/laravel.png")
+          li
+            a.tech-generic(href="https://jquerymobile.com/", target="_blank")
+              img.img-circlex(src="img/logos/jquerymobile.png")
+          //li
+            a.tech-generic(href="http://getbootstrap.com/", target="_blank")
+              img(src="img/logos/html5.png")
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com?subject=Sugerirencia de  tecnología", target="_blank") Sugerir tecnología
         .col-sm-10.col-sm-offset-1
@@ -117,7 +138,10 @@ block content
   .row.color-1
     .col-sm-12
       section.neck-step-4.jurado-con
-        h2 Que pertenezca a alguna de estas categorías:
+        h2 
+          | El
+          strong  proyecto
+          |  debe pertenecer a alguna de las siguientes categorías:
         div.col-sm-8.col-sm-offset-2
           ul.fa-ul.text-left.lista-categorias
             li
@@ -307,7 +331,7 @@ block content
         ul.list-inline
           li
             a(href="http://www.polotecnologico.net/", target="_blank")
-              img(src="./sponsors/CFCH.png")
+              img(src="./sponsors/CFCH.png", style="max-width: 250px;")
           li
             a(href="http://emprendedores.la/", target="_blank")
               img(src="./sponsors/logo-emprendedoresla.png")
