--- a/views/index.jade
+++ b/views/index.jade
@@ -32,8 +32,10 @@ block content
   .row.color-1
     .col-sm-12
       section.neck-step-2
-        p.text-center(style="padding-bottom: 20px; margin-bottom:20px")
+        p.text-center
           a.button(href="https://goo.gl/bHiWIr", target="_blank") Pre-inscribirse 
+        p.text-center(style="padding-bottom: 20px; margin-bottom:20px")
+          span (podés pre-inscribirte incluso si todavia no tenes equipo)
         .fc-con.animated(flipclock)
         // Botones redes sociales
         #fb-root
@@ -427,7 +429,7 @@ block content
                        .agenda-event
                          h3 
                            i.ion-android-checkbox-outline
-                           |  Acreditación 
+                           |  Acreditación y Apertura 
                    tr
                      td.agenda-time
                        | 14:00 - 14:30 HS
@@ -540,14 +542,19 @@ block content
                      |  Primer Puesto
                    p(style="text-align:center") Elegido por el jurado
                  td
+                   h4.text-center
+                    img(src="premios/chromecast.png", style="display:block")
+                    span Chromecast (para cada uno de los integrantes):  
+                   p 
+                    | Valor: $900 c/u
                    h4 Cloud server pack 1 (para el equipo): 
                    p 
                     | Descripción: 1 vCPU's, 1 GB RAM, 10 GB SSD Storage por un año. Sin licencias
                    p 
                     | Valor: $1250 anual - cortesía de Donweb
-                   h4 Plan de hosting basico sin dominio (cada cada uno de los integrantes): 
+                   h4 Plan de hosting basico sin dominio (para cada uno de los integrantes): 
                    p 
-                    | Valor: $599 anual - cortesía de Donweb
+                    | Valor: $599 anual c/u - cortesía de Donweb
 
         .table-responsive.premios
            table.table.table-condensed
@@ -569,7 +576,7 @@ block content
                     | Descripción: 1 vCPU's, 1 GB RAM, 10 GB SSD Storage por un año. Sin licencias
                    p 
                     | Valor: $1250 anual - cortesía de Donweb
-                   h4 Plan de hosting basico sin dominio (cada cada uno de los integrantes): 
+                   h4 Plan de hosting basico sin dominio (para cada uno de los integrantes): 
                    p 
                     | Valor: $599 anual - cortesía de Donweb
         
