Adding more techs

--- a/views/index.jade
+++ b/views/index.jade
@@ -112,6 +112,22 @@ block content
           //li
             a.tech-generic(href="http://getbootstrap.com/", target="_blank")
               img(src="img/logos/html5.png")
+        ul.list-inline.tech
+          li
+            a.tech-generic(href="https://www.android.com/", target="_blank")
+              img.img-circle(src="img/logos/android.png", style="background-color: #FFF;")
+          li
+            a.tech-generic(href="https://grails.org/", target="_blank")
+              img.img-circle(src="img/logos/grails.png")
+          li
+            a.tech-generic(href="http://www.microsoft.com/en-us/download/details.aspx?id=17851", target="_blank")
+              img(src="img/logos/dotnet.png")
+          li
+            a.tech-generic(href="https://developer.mozilla.org/es/docs/HTML/HTML5", target="_blank")
+              img(src="img/logos/html5.png")
+          li
+            a.tech-generic(href="https://spring.io/", target="_blank")
+              img(src="img/logos/spring.png")
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com?subject=Sugerirencia de  tecnología", target="_blank") Sugerir tecnología
         .col-sm-10.col-sm-offset-1
