--- a/views/index.jade
+++ b/views/index.jade
@@ -377,6 +377,10 @@ block content
           li
             a(href="http://www.erapm.com.ar/", target="_blank")
               img(src="./auspiciantes/era.png")
+        ul.list-inline
+          li
+            a(href="http://www.kodear.net/", target="_blank")
+              img(src="./auspiciantes/kodear.png")
         h2 Institucionales
         ul.list-inline
           li
