--- a/views/index.jade
+++ b/views/index.jade
@@ -35,7 +35,7 @@ block content
         p.text-center
           a.button(href="https://goo.gl/bHiWIr", target="_blank") Pre-inscribirse 
         p.text-center(style="padding-bottom: 20px; margin-bottom:20px")
-          span (podés pre-inscribirte incluso si todavia no tenes equipo)
+          span(style="color:#fff") < podés pre-inscribirte incluso si todavia no tenes equipo >
         .fc-con.animated(flipclock)
         // Botones redes sociales
         #fb-root
